# coq-lean-import

./: .gitignore  Lean.v  LeanImport.v  Makefile  README.md  _CoqProject  coq-lean-import.opam  dune  g_lean.mlg  lean.ml  lean.mli  lean_import_plugin.mllib  meta.yml  notes.txt  plugin_base.dune  rocq-lean-import.opam
.github/workflows/: docker-action.yml
dumps/: anomaly_print_projections.out  bla  core  list  quot
src/: .ocamlformat  Lean.v  dune  g_lean.mlg  lean.ml  lean.mli
test/: core.v
tests/: Makefile  _CoqProject  anomaly_print_projections.v  core.v  init.v  mathlib.v  stdlib.v
