opam-version: "2.0"
maintainer: "gaetan.gilbert@skyskimmer.net"
version: "dev"

homepage: "https://github.com/SkySkimmer/coq-lean-import"
dev-repo: "git+https://github.com/SkySkimmer/coq-lean-import.git"
bug-reports: "https://github.com/SkySkimmer/coq-lean-import/issues"
license: "LGPL-2.1-only"

synopsis: "Plugin allowing Coq to import Lean exported files"
description: """
Plugin allowing Coq to import Lean exported files."""

build: [make "-j%{jobs}%" "test"]
install: [make "install"]
depends: [
  "ocaml" {>= "4.09.0"}
  "coq" {= "dev"}
  "uutf"
]

tags: [
  "logpath:LeanImport"
]
authors: [
  "Gaëtan Gilbert"
]
